@@ -13,6 +13,12 @@
 - Fixed a hash parsing problem when using --show/--left together with hashes with long salts that require pure kernels
 - Fixed the output of --show if $HEX[] passwords are present within the potfile
 
+##
+## Technical
+##
+
+- Changed the way large strings are handled/truncated within the event buffer if they are too large to fit
+
 * changes v4.0.0 -> v4.0.1:
 
 ##
